# QueryDSL

./: .gitignore  README.md  app.py  pyproject.toml
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-06-13-querydsl.md
docs/superpowers/specs/: 2026-06-13-querydsl-design.md
querydsl/: compiler.py  db.py  introspect.py  llm.py  models.py  nl_to_dsl.py  semantic.py  validate.py
tests/: conftest.py  test_compiler.py  test_introspect.py  test_models.py  test_nl_to_dsl.py  test_semantic.py  test_validate.py
